Modification du style

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <div id="blockFormulaire">
         <form method="POST">
             <!-- "required": ["area", "property-type", "rooms-number", "zip-code"], -->
-            <label for="name">Enter the surface </label>
-            <input type="text" name="name" id="surface" required><br>
+            <input type="text" name="name" id="surface" placeholder="Enter the surface" required><br>
 
             <label for="name">Enter the property-type </label>
             <!-- <input type="text" name="name" id="property-type" required><br> -->
