Amélioration du style

--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
                 <option value="OTHERS">OTHERS</option>
             </select><br>
 
-            <label for="name">Enter the rooms-number </label>
-            <input type="text" name="name" id="rooms-number" required> <br>
-
-            <label for="name">Enter the postal code </label>
-            <input type="text" name="name" id="postalCode" required> <br>
+            <input type="text" name="name" id="rooms-number" placeholder= "Enter the rooms-number" required> <br>       
+            <input type="text" name="name" id="postalCode" placeholder= "Enter the postal code"  required> <br>
 
             <!-- <input type="submit" id="buttonAPI" value="click here"> -->
             <button type="button" id="buttonAPI" class="btn btn-primary btn-sm">Small button</button>
